Add jvm opts to forked tests